--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-sggghggggggg
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
+    <header>
+        <h1>Elon Musk</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="bio">
+        <p>It seems like not a day goes by without billionaire Elon Musk making headlines.
+            The boss of X (formerly Twitter), Tesla and SpaceX is the world's richest person and has used his platform to make his views known on a vast array of topics.
+            He has also charged ahead with human brain chip trials at his firm Neuralink, played with turning X into a super app and tried to cement his presence in the fast-growing world of artificial intelligence, despite having warned it could lead to humanity's extinction.
+            And Mr Musk's status and wealth seems set to climb higher still following Donald Trump's victory in the 2024 US presidential election - in which the Tesla executive has played a key but controversial role.
+            The president-elect has picked Mr Musk to lead a newly created Department of Government Efficiency (or Doge - like the dog-related meme) for his incoming administration.
+            Trump said Doge would help the administration "dismantle Government Bureaucracy, slash excess regulations, cut wasteful expenditures and restructure Federal Agencies".
+            </p>
+    </div>
+    <footer>
+        
+    </footer>
+    
+</body>
+</html>
