--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             Trump said Doge would help the administration "dismantle Government Bureaucracy, slash excess regulations, cut wasteful expenditures and restructure Federal Agencies".
             </p>
     </div>
+    <div class="profile-picture">
+        <img src="images/Elon-Musk.jpg" alt="">
+    </div>
     <footer>
         
     </footer>
