--- a/index.html
+++ b/index.html
@@ -24,12 +24,32 @@
             And Mr Musk's status and wealth seems set to climb higher still following Donald Trump's victory in the 2024 US presidential election - in which the Tesla executive has played a key but controversial role.
             The president-elect has picked Mr Musk to lead a newly created Department of Government Efficiency (or Doge - like the dog-related meme) for his incoming administration.
             Trump said Doge would help the administration "dismantle Government Bureaucracy, slash excess regulations, cut wasteful expenditures and restructure Federal Agencies".
-            </p>
+        </p>
+        <button class="more-info">Click Me</button>
     </div>
     <div class="profile-picture">
         <img src="images/Elon-Musk.jpg" alt="">
     </div>
     <footer>
+        <div class="area1">
+            <p>Since bursting on to the Silicon Valley scene more than two decades ago, the 53-year-old serial entrepreneur has kept the public captivated with his business antics.
+            Born in Pretoria, South Africa, Mr Musk showed his talents for entrepreneurship early, going door-to-door with his brother selling homemade chocolate Easter eggs and developing his first computer game at the age of 12.
+            He has described his childhood as difficult, affected by his parents' divorce, bullying at school and his own difficulty picking up on social cues because of Asperger's Syndrome. At the earliest opportunity, he left home for college, moving to Canada and then the US, where he studied economics and physics at the University of Pennsylvania, an Ivy League college.
+            In a 2010 essay for Marie Claire, his first wife, Justine Musk, a writer whom he met in college and married in 2000, wrote that even before making his millions Mr Musk was "not a man who takes no for an answer".
+            "The will to compete and dominate, that made him so successful in business, did not magically shut off when he came home," she recalled, adding that he told her while dancing at their wedding, "I am the alpha in this relationship."</p>
+        </div>
+
+        <div class="area2">
+            <p>After being accepted to a physics graduate degree programme at Stanford University, Mr Musk quickly dropped out and founded two technology start-ups during the "dotcom boom" of the 1990s. These included a web software firm and an online banking company that eventually became PayPal, which was sold to eBay in 2002 for $1.5bn (£1.2bn).
+            He ploughed his fortune into a new rocket company, SpaceX - which he aimed to make a cost-effective alternative to Nasa - and a new electric car company, Tesla, where he chaired the board until becoming chief executive in 2008.</p>
+        </div>
+        <div class="area3">
+            <p>The two firms are credited with upending their industries, even as they sometimes veered close to financial collapse.
+            More recent business ventures include his takeover of social media platform Twitter in October 2022.
+            Since then he has dramatically reduced the size of its workforce including, controversially, cuts to teams responsible for keeping the platform safe; rebranded the company as X; and introduced new premium subscriptions so that the business does not rely on advertising alone for income.
+            Mr Musk's long-term ambition is for X to become an "everything app" offering a range of services. However, so far the value of the firm has plunged from the $44bn he originally paid to just $19bn, according to reports.</p>
+        </div>
+
         
     </footer>
     
