added css to body and header

--- a/index.html
+++ b/index.html
@@ -17,19 +17,18 @@
             </ul>
         </nav>
     </header>
-    <div class="bio">
-        <p>It seems like not a day goes by without billionaire Elon Musk making headlines.
-            The boss of X (formerly Twitter), Tesla and SpaceX is the world's richest person and has used his platform to make his views known on a vast array of topics.
-            He has also charged ahead with human brain chip trials at his firm Neuralink, played with turning X into a super app and tried to cement his presence in the fast-growing world of artificial intelligence, despite having warned it could lead to humanity's extinction.
-            And Mr Musk's status and wealth seems set to climb higher still following Donald Trump's victory in the 2024 US presidential election - in which the Tesla executive has played a key but controversial role.
-            The president-elect has picked Mr Musk to lead a newly created Department of Government Efficiency (or Doge - like the dog-related meme) for his incoming administration.
-            Trump said Doge would help the administration "dismantle Government Bureaucracy, slash excess regulations, cut wasteful expenditures and restructure Federal Agencies".
-        </p>
-        <button class="more-info">Click Me</button>
+    <div class="content">
+        <div class="bio">
+            <p>It seems like not a day goes by without billionaire Elon Musk making headlines.The boss of X (formerly Twitter), Tesla and SpaceX is the world's richest person and has used his platform to make his views known on a vast array of topics.He has also charged ahead with human brain chip trials at his firm Neuralink, played with turning X into a super app and tried to cement his presence in the fast-growing world of artificial intelligence, despite having warned it could lead to humanity's extinction.And Mr Musk's status and wealth seems set to climb higher still following Donald Trump's victory in the 2024 US presidential election - in which the Tesla executive has played a key but controversial role.The president-elect has picked Mr Musk to lead a newly created Department of Government Efficiency (or Doge - like the dog-related meme) for his incoming administration.Trump said Doge would help the administration "dismantle Government Bureaucracy, slash excess regulations, cut wasteful expenditures and restructure Federal Agencies".
+            </p>
+            <button>Read More</button>
+        </div>
+        <div class="profile-picture">
+            <img src="images/Elon-Musk.jpg" alt="elon-image">
+        </div>
+
     </div>
-    <div class="profile-picture">
-        <img src="images/Elon-Musk.jpg" alt="">
-    </div>
+    
     <footer>
         <div class="area1">Facebook</div>
          <div class="area2">Twitter</div>
