--- a/index.html
+++ b/index.html
@@ -34,9 +34,15 @@
     </main>
     
     <footer>
-        <div class="area1">Facebook</div>
-         <div class="area2">Twitter</div>
-        <div class="area3">Instagram</div> 
+        <div class="area1">
+            <a href="#">Facebook</a>
+        </div>
+         <div class="area2">
+            <a href="#">Twitter</a>
+         </div>
+        <div class="area3">
+            <a href="#">Instagram</a>
+        </div> 
     </footer>
     
 </body>
