--- a/index.html
+++ b/index.html
@@ -8,13 +8,10 @@
 </head>
 <body>
     <header>
-        <h1>Elon Musk</h1>
         <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Contact</a>
         </nav>
     </header>
     <main>
