--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <h1>Subash Chhetri</h1>
         <nav>
             <a href="#">Home</a>
             <a href="#">About</a>
