--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
     </main>
     
     <footer>
-        <div class="area1">
+        <div class="footer1">
             <a href="#">Facebook</a>
         </div>
-         <div class="area2">
+        <div class="footer2">
             <a href="#">Twitter</a>
-         </div>
-        <div class="area3">
+        </div>
+        <div class="footer3">
             <a href="#">Instagram</a>
-        </div> 
+        </div>
     </footer>
     
 </body>
